@@ -12,6 +12,10 @@ buildscript {
     }
 }
 
+plugins {
+    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.1.7'
+}
+
 import com.cleanroommc.gradle.helpers.tasks.*
 
 import groovy.json.JsonBuilder
@@ -61,6 +65,11 @@ def jvm_arguments = [
         '--add-opens=java.base/java.lang=ALL-UNNAMED',
         '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
         '-Dmixin.debug=true'
+]
+
+def compiler_jvm_arguments = [
+        '--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED',
+        '--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED'
 ]
 // Projects
 
@@ -240,7 +249,7 @@ project(':cleanroom') {
                 environment 'FORGE_VERSION', props.new_forge_version
 
                 jvmArgs '-Djava.library.path=' + project.file('build/natives')
-                jvmArgs jvm_arguments
+                // jvmArgs jvm_arguments
 
                 // Lazily supply the Mappings target, createSrg2Mcp.getMappings() doesn't get populated until later
                 lazyToken 'mcp_mappings', { ->
@@ -371,7 +380,7 @@ project(':cleanroom') {
         // Added back deprecated features for mods to load up properly
         installer "org.ow2.asm:asm-deprecated:$props.asm_deprecated"
 
-        installer "com.cleanroommc:bouncepad:$props.bouncepad_version"
+        installer 'com.cleanroommc:bouncepad:0.3'
 
         installer "com.github.CleanroomMC:Mixin:$props.mixin_version"
 
@@ -842,7 +851,6 @@ project(':cleanroom') {
                 processors: []
             ]
             Util.getClasspath(project, libs, project(':mcp').mcp.config.get().descriptor)
-            // Tell it to download mcp_config
             json.libraries = libs.values().sort { a, b -> a.name.compareTo(b.name) }
 
             output.text = new JsonBuilder(json).toPrettyString()
@@ -1040,6 +1048,12 @@ project(':cleanroom') {
         jvmArgs jvm_arguments
     }
 }
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += compiler_jvm_arguments
+}
+
+idea.project.settings.compiler.javac.javacAdditionalOptions = compiler_jvm_arguments.join(' ')
 
 task setup() {
     group 'setup'
